[project]
name = "comfyui-diffusers"
description = "This extension enables the use of the diffuser pipeline in ComfyUI."
version = "1.0.0"
license = "LICENSE"
dependencies = ["diffusers[torch]", "accelerate", "transformers", "safetensors", "omegaconf", "pytorch_lightning", "xformers", "git+https://github.com/cumulo-autumn/StreamDiffusion.git@main#egg=streamdiffusion[tensorrt]"]

[project.urls]
Repository = "https://github.com/Limitex/ComfyUI-Diffusers"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-Diffusers"
Icon = ""
