[project]
name = "comfyui-diffusers"
description = "This extension enables the use of the diffuser pipeline in ComfyUI. It also includes nodes related to Stream Diffusion."
version = "1.0.2"
license = { file = "LICENSE" }
dependencies = ["diffusers[torch]>=0.29.0", "accelerate", "transformers", "safetensors", "omegaconf", "pytorch_lightning", "xformers", "git+https://github.com/cumulo-autumn/StreamDiffusion.git@main#egg=streamdiffusion[tensorrt]"]

[project.urls]
Repository = "https://github.com/Limitex/ComfyUI-Diffusers"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "limitex"
DisplayName = "ComfyUI-Diffusers"
Icon = ""
